uneven spaces corrected

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -4,6 +4,7 @@
 .hero-container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url('/public/hero.jpg');
+
   margin-top: 5rem;
   padding: 0 7.5rem;
   background-size: cover;
@@ -50,17 +51,22 @@
   .hero-container {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
       url('/public/hero.jpg');
-    padding: 0 2rem 0;
+    padding: 0 2rem ;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0;
   }
 
   .hero-text {
-    padding-top: 12rem;
     color: #f6f6f6;
     width: 100%;
+    justify-self: flex-end;
+    align-items: center;
   }
   
   .occupation {
