--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -113,9 +113,9 @@ hr {
   .project-items {
     background-color: none;
     flex-direction: column;
+    justify-content: center;
     gap: 0;
     width: 100%;
-    height: 100vh;
     border-radius: 1.5rem;
     box-shadow: none;
     margin-top: 1.2rem;
@@ -126,8 +126,7 @@ hr {
     width: 100%;
     flex-direction: column;
     justify-content: center;
-    padding: 0.6rem 1rem 1rem 1rem;
-    border: 2px solid red;
+    padding: 0.6rem 1rem 0 1rem;
   }
   .project-name {
     margin: 0;
@@ -148,12 +147,10 @@ hr {
   }
 
   .project-image-mobile {
-    border: 2px solid red;
     margin-bottom: 0.8rem;
     display: flex;
     object-fit: cover;
     width: 100%;
-    height: 50%;
     box-shadow: 0px 6px 64px 0px rgba(104, 130, 155, 0.1);
   }
   /* Links css */
@@ -163,7 +160,6 @@ hr {
     font-family: 'Roboto', sans-serif;
     color: #25282b;
     margin-top: 1rem;
-    margin-bottom: 6rem;
   }
   .github-link,
   .live-link {
